# deepfake-detector-app

./: .gitignore  README.md
backend/: api.py  generate_plots.py  predict.py  pyproject.toml  requirements.txt  train.py  train_forensic_resnet.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend.legacy/: package-lock.json
frontend.legacy/app/: globals.css
frontend.legacy/components/: 3d-background.tsx  cta.tsx  how-it-works.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: about.tsx  custom-progress.tsx  deepfake-detector.tsx  detector.tsx  drag-drop-zone.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  landing-sections.tsx  landing.tsx  loading-state.tsx  particle-background.tsx  result-display.tsx  scanning-animation.tsx  starfield-background.tsx
frontend/hooks/: use-scroll-animations.ts
